--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shalinivyas.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -13,14 +14,17 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.0.5",
-    "react-scripts": "^5.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-hook-form": "^7.43.2",
+    "react-scripts": "^2.1.3",
     "react-scroll": "^1.8.2",
     "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
