--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://shalinivyas.github.io/portfolio-master/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shalinivyas.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -14,21 +14,21 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-facebook-login": "^4.1.1",
-    "react-hook-form": "^7.43.2",
-    "react-scripts": "^5.0.1",
+    "react-hook-form": "^7.1.1",
+    "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-share": "^4.4.0",
+    "react-social-icons": "^5.1.1",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
