--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.1.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
@@ -49,6 +50,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
